# reservation

./: Cargo.toml  LICENSE.md  README.md  deny.toml  start_postgres.sh
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: error.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20250620074404_init.up.sql  20250620082736_reservation_trigger.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: template.md
service/: Cargo.toml
service/src/: lib.rs  main.rs  service.rs
