[package]
name = "abi"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
[dependencies]
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono","macros","uuid"] }
thiserror = "2.0.12"
derive_builder = "0.20.2"
[build-dependencies]
tonic-build = {version = "0.13", features = ["prost"]}
