[package]
name = "reservation"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = "4.5.40"
dotenvy = "0.15.7"
futures = "0.3.31"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["sync"] }
tracing = "0.1.41"

[dev-dependencies]
prost-types = "0.14.1"
tokio = { version = "1.45.1", features = ["full"] }
