[package]
name = "reservation-service"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
[dependencies]
tonic = { version = "0.13.1" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.98"
abi = { path = "../abi" }
reservation = { path = "../reservation" }
